[package]
name = "sslogic-rs"
version = "0.1.0"
authors = ["lepelog <lepelog@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.8" }
linked-hash-map = "0.5.3"
