[package]
name = "sslogic-rs"
version = "0.1.0"
authors = ["lepelog <lepelog@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
serde_yaml = { version = "0.9.19" }
serde_json = "1.0.94"
base64 = "0.21.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
thiserror = "1.0.40"

[workspace]
members = [".", "logic-generator", "logic-core", "logic-simplificator", "logic-user", "runtime-logic"]