[package]
name = "logic-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
heck = "0.4.1"
indexmap = { version = "1.9.3", features = ["serde"] }
regex = "1.7.2"
serde = { version = "1.0.158", features = ["derive"] }
serde_yaml = "0.9.19"
