[package]
name = "logic-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
logic-core = { path = "../logic-core" }
rand = "0.8.5"
rand_pcg = "0.3.1"
thiserror = "1.0.40"

[profile.release]
debug = 1
