[package]
name = "runtime-logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bitflags = "2.4.1"
heck = "0.5.0"
indexmap = { version = "2.1.0", features = ["serde"] }
prettyplease = "0.2.17"
proc-macro2 = "1.0.79"
quote = "1.0.35"
rand = "0.8.5"
rand_pcg = "0.3.1"
regex = "1.10.2"
rust-dense-bitset = "0.1.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_yaml = "0.9.30"
snafu = "0.8.0"
syn = "2.0.58"
